Love language update

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laerning Git</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Love language</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime consectetur natus similique incidunt est esse repellat temporibus deserunt veritatis iste quas ipsa enim placeat inventore qui aliquid, blanditiis non aut?</p>
+    <ul>
+        <li>Orange</li>
+        <li>Banana</li>
+        <li>Strawberry</li>
+        <li>Pineaple</li>
+    </ul>
+    <script src="app.js"></script>
 </body>
 </html>
